mypkg/objects/Car_Parts__c.object
<CustomObject>
    <fields>
        <fullName>Car_Part_Number__c</fullName>
        <displayFormat>CPN-{0000}</displayFormat>
        <label>Car Part Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>The Chassis</fullName>
                </value>
                <value>
                    <fullName>The Engine</fullName>
                </value>
                <value>
                    <fullName>The Transmission System</fullName>
                </value>
                <value>
                    <fullName>The Body</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Select_Car_Serial_Number__c</fullName>
        <label>Select Car Serial Number</label>
        <referenceTo>Car_Part__c</referenceTo>
        <relationshipLabel>Car Parts</relationshipLabel>
        <relationshipName>Car_Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Car Part</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Select_Car_Serial_Number__c</columns>
        <columns>Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Car Part Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Car Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>